--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -12,6 +12,6 @@
   display: none;
 }
 
-div#wall div.parent div:last-child div#tag-6 {
+#wall div.parent div:last-child div#tag-6 {
   display: none;
 }
