--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -20,7 +20,7 @@
   display: none;
 }
 
-#wall div.parent div:last-child #tag-6 {
+#wall div.parent div:last-child #tag-6:nth-child(2) {
   display: none;
 }
 
