Automatically backed up by Learn

--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -24,6 +24,6 @@
   display: none;
 }
 
-body #wall div.parent div > #tag-7.slick {
+body #wall div.parent div > #tag-7.slick:only-child {
   display: none;
 }
